Music page: small fix to raise vol buttons higher on the touch panel (in the browser they look too high, but on the touch panel they appear to be lower)

--- a/app/assets/scss/_components.scss
+++ b/app/assets/scss/_components.scss
@@ -1992,7 +1992,7 @@ $blackout_bg_image: url("./../img/blinds/curtain_grey_left_resized.png");
         max-height: 3rem;
         background: transparent;
         box-shadow: none;
-        margin-bottom: 0.8rem;
+        margin-bottom: 1.6rem;
 
         .fa-volume-mute {
           font-size: 1.3rem;
